--- a/views/index.html
+++ b/views/index.html
@@ -25,7 +25,7 @@
         <div class="col-sm-9 col-sm-offset-3 col-md-10 col-md-offset-2 main">
 
           <h2 class="sub-header">Section title</h2>
-          <a class="btn btn-success" href="" style="margin-bottom: 10px;">添加学生</a>
+          <a class="btn btn-success" href="/students/new" style="margin-bottom: 10px;">添加学生</a>
           <div class="table-responsive">
             <table class="table table-striped">
               <thead>
