--- a/views/edit.html
+++ b/views/edit.html
@@ -25,7 +25,8 @@
         <div class="row">
             <div class="col-sm-9 col-sm-offset-3 col-md-10 col-md-offset-2 main">
                 <h2 class="sub-header">编辑学生</h2>
-                <form action='/students/new' method='post'>
+                <form action='/students/edit' method='post'>
+                    <input type="hidden" value="{{ student.id }}" name="id">
                     <div class="form-group">
                         <label for="">姓名</label>
                         <input type="text" value="{{ student.name }}" class="form-control" id="" placeholder="" name="name">
